# bilingual_book_maker

./: .dockerignore  .gitignore  .pdm-python  404.html  Colab.ipynb  Colab_billingual_book_maker.ipynb  Dockerfile  JenkinsFile  LICENSE  Makefile  README-CN.md  README.md  abstract.py  advance_prompt.json  bilingual_book_maker_on_Colab2023.ipynb  disclaimer.md  file_engine.py  index.html  lemo-h-original_furigana.epub  lemo-h-original_furigana_bilingual.epub  make.py  make_book.py  mkdocs.yml  prompt_md.json  prompt_md.prompt.md  prompt_template_sample.json  prompt_template_sample.txt  pyproject.toml  requirements.txt  setup.py  test.py  the_little_prince_bilingual_temp.txt  translate_engine.py  typos.toml  utils.py
.claude/: CLAUDE.md  context.md  ignore  prompts.json
.github/workflow/: pylint.py
.github/workflows/: docs.yaml  main.yml  make_test_ebook.yaml  pylint.yml  release.yaml
api_docs/: api-layer.md  api-specification.md
api_layer/: .env.example  CORS_SECURITY.md  Dockerfile  IMPLEMENTATION_SUMMARY.md  README.md  integration_test.py  test_main.py  test_translation.py
api_layer/api/: __init__.py  async_translator.py  auth.py  config.py  error_handler.py  job_manager.py  log_parser.py  (+5 more)
book_maker/: __main__.py  cli.py  config.py  obok.py  provider_loader.py  utils.py
book_source/: index.html
cmd/: index.html
config_docs/: CONFIG_MANAGEMENT.md  CORS_SECURITY.md
disclaimer/: index.html
docs/: FRONTEND_SETUP_GUIDE.md  book_source.md  cmd.md  disclaimer.md  env_settings.md  index.md  installation.md  model_lang.md  prompt.md  quickstart.md
env_settings/: index.html
glossary/: ophthalmology.txt
installation/: index.html
model_lang/: index.html
prompt/: index.html
quickstart/: index.html
review/: ARCHITECTURE_ASSESSMENT.md  README.md  SECURITY_ANALYSIS.md  TESTING_STRATEGY.md
scripts/: create_glossary.py
search/: search_index.json
test_books/: Lex_Fridman_episode_322.srt  Liber_Esther.epub  animal_farm.epub  animal_farm_bilingual.epub  lemo.epub  the_little_prince.txt
test_terminology/: ophthalmology.txt
tests/: test_cli.py  test_epub_loader_batch_translate.py  test_epub_metadata.py  test_gemini_batch_translate.py  test_google_v3.py  test_integration.py  test_md_loader.py  test_pdf_cli.py  test_pdf_layout.py  test_pdf_loader.py  test_provider_loader.py  test_qwen_rate_limit.py  test_translate_tags.py  test_txt_loader.py
(+61 files in other folders)
